app/assets/stylesheets/base/navbar.scss
.navbar {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  z-index: 100;
  background: $color_lighter;
  height: $navbar_height;

  .highlight {
    background: $color_accent;
    padding: 0.3rem 0.6rem;
    border-radius: 4px;
    color: white;
    margin-left: 1rem;
  }

  a, a:hover {
    border: 0;
  }

  /*Strip the ul of padding and list styling*/
  ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    position: absolute;
  }

  #menu {
    top: 0;
    left: 0;
    right: 0;

    .fa {
      width: 1.2em;
      text-align: center;
    }
  }

  li.right {
    float: right;
  }

  /*Create a horizontal list with spacing*/
  li {
    display:inline-block;
    float: left;
    margin: 0;

    img {
      max-height: $navbar_height;
      padding: 1.5rem;
      margin-top: -1px;
      vertical-align: middle;
    }

    /*Style for menu links*/
    a {
      display: block;
      min-width: 100px;
      height: $navbar_height;
      text-align: center;
      line-height: $navbar_height;
      color: $color_darker;
      background: $color_lighter;
      text-decoration: none;
    }
  }

  /*Hover state for top level links*/
  li:hover a {
    color: $color_accent;
    background: $color_lighter;
  }

  /*Style for dropdown links*/
  li ul {
    min-width: 150px;

    a {
      height: 40px;
      line-height: 40px;
    }
  }
  /*Style for dropdown links*/
  li:hover ul {
    a {
      background: $color_lighter;
      color: $color_darker;

      /*Hover state for dropdown links*/
      &:hover {
        background: $color_lighter;
        color: $color_accent;
      }
    }
  }

  /*Hide dropdown links until they are needed*/
  li ul {
    display: none;
    border: 1px solid #ccc;
    border-top: 0;

    /*Make dropdown links vertical*/
    li {
      display: block;
      float: none;

      /*Prevent text wrapping*/
      a {
        width: auto;
        min-width: 100px;
        padding: 0 20px;
      }
    }
  }

  ul li ul li a {
    text-align: left;
  }

  /*Display the dropdown on hover*/
  ul li a:hover + .hidden, .hidden:hover {
    display: block;
  }

  /*Style 'show menu' label button and hide it by default*/
  .show-menu {
    text-decoration: none;
    color: $color_dark;
    background: $color_lighter;
    text-align: center;
    padding: 0;
    display: none;
    height: $navbar_height;
    line-height: $navbar_height;
    margin: 0;
  }

  input[type=checkbox]:checked ~ .show-menu:after {
    content: 'Hide Menu';
    position: absolute;
    background: $color_lighter;
    top: 0;
    left: 0;
    right: 0;
    //bottom: 0;
  }

  /*Hide checkbox*/
  input[type=checkbox] {
    display: none;
  }

  /*Show menu when invisible checkbox is checked*/
  input[type=checkbox]:checked ~ #menu{
    display: block;
  }
}

/*Responsive Styles*/

@media screen and (max-width : 760px) {
  .navbar {
    /*Make dropdown links appear inline*/
    ul {
      position: static;
      display: none;
    }
    /*Make all menu links full width*/
    ul li, li a {
      width: 100%;
    }
    /*Display 'show menu' link*/
    .show-menu {
      display:block;
    }
    li ul {
      display: block;
    }
  }
  #menu {
    &>li:last-child {
      border-bottom: 1px solid $color_light;
    }
  }
  .navbar .container {
    width: 100%;
  }
}

